--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
       </main>
     </div>
     <div id="dialog-root">
-      <div class="dialog" id="basic-dialog" tabindex="-1" aria-modal="true" aria-hidden="true" data-controller="dialog" data-dialog-app-root="app-root">
+      <div class="dialog" id="basic-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog" data-dialog-app-root="app-root">
         <div class="dialog__inner">
           <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-          <div class="dialog__element" role="dialog" aria-labelledby="basic-dialog-title">
+          <div class="dialog__element" role="dialog" aria-labelledby="basic-dialog-title" aria-modal="true">
             <div class="dialog__document" role="document">
               <h1 id="basic-dialog-title">Basic Dialog Title</h1>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
@@ -40,10 +40,10 @@
           </div>
         </div>
       </div>
-      <div class="dialog" id="long-dialog" tabindex="-1" aria-modal="true" aria-hidden="true" data-controller="dialog" data-dialog-app-root="app-root">
+      <div class="dialog" id="long-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog" data-dialog-app-root="app-root">
         <div class="dialog__inner">
           <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-          <div class="dialog__element" role="dialog" aria-labelledby="long-dialog-title">
+          <div class="dialog__element" role="dialog" aria-labelledby="long-dialog-title" aria-modal="true">
             <div class="dialog__document" role="document">
               <h1 id="long-dialog-title">Long Dialog Title</h1>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
@@ -53,10 +53,10 @@
           </div>
         </div>
       </div>
-      <div class="dialog" id="animated-dialog" tabindex="-1" aria-modal="true" aria-hidden="true" data-controller="dialog" data-dialog-app-root="app-root">
+      <div class="dialog" id="animated-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog" data-dialog-app-root="app-root">
         <div class="dialog__inner">
           <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-          <div class="dialog__element" role="dialog" aria-labelledby="animated-dialog-title">
+          <div class="dialog__element" role="dialog" aria-labelledby="animated-dialog-title" aria-modal="true">
             <div class="dialog__document" role="document">
               <h1 id="animated-dialog-title">Animated Dialog Title</h1>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
@@ -64,8 +64,8 @@
           </div>
         </div>
       </div>
-      <div class="full-screen-dialog" id="full-screen-dialog" tabindex="-1" aria-modal="true" aria-hidden="true" data-controller="dialog" data-dialog-app-root="app-root">
-        <div class="full-screen-dialog__element" role="dialog" aria-labelledby="full-screen-dialog-title">
+      <div class="full-screen-dialog" id="full-screen-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog" data-dialog-app-root="app-root">
+        <div class="full-screen-dialog__element" role="dialog" aria-labelledby="full-screen-dialog-title" aria-modal="true">
           <div class="full-screen-dialog__document" role="document">
             <button type="button" data-action="dialog#hide">Close</button>
             <h1 id="full-screen-dialog-title">Full-screen Dialog Title</h1>
