--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,9 @@
   <body>
     <div id="app-root">
       <main>
-        <h1>Stimulus Dialog</h1>
+        <h1>
+          <a href="https://github.com/chalkygames123/stimulus-dialog" rel="noreferrer noopener">Stimulus Dialog</a>
+        </h1>
         <button type="button" data-dialog-show="basic-dialog">Show Basic Dialog</button>
         <p class="ellipsis">...<br />...<br />...<br />...<br />...<br /></p>
         <button type="button" data-dialog-show="long-dialog">Show Long Dialog</button>
