--- a/src/index.html
+++ b/src/index.html
@@ -18,16 +18,23 @@
   <body>
     <div id="app-root">
       <main>
-        <h1>
-          <a href="https://github.com/chalkygames123/stimulus-dialog" rel="noreferrer noopener">Stimulus Dialog</a>
-        </h1>
-        <button type="button" data-dialog-show="basic-dialog">Show Basic Dialog</button>
-        <p class="ellipsis">...<br />...<br />...<br />...<br />...<br /></p>
-        <button type="button" data-dialog-show="long-dialog">Show Long Dialog</button>
-        <p class="ellipsis">...<br />...<br />...<br />...<br />...<br /></p>
-        <button type="button" data-dialog-show="animated-dialog">Show Animated Dialog</button>
-        <p class="ellipsis">...<br />...<br />...<br />...<br />...<br /></p>
-        <button type="button" data-dialog-show="full-screen-dialog">Show Full-screen Dialog</button>
+        <h1>Stimulus Dialog</h1>
+        <p>Source: <a href="https://github.com/chalkygames123/stimulus-dialog" rel="noreferrer noopener">https://github.com/chalkygames123/stimulus-dialog</a></p>
+        <div class="opener-wrapper">
+          <button type="button" data-dialog-show="basic-dialog">Show Basic Dialog</button>
+        </div>
+        <p class="ellipsis">…<br />…<br />…<br />…<br />…<br /></p>
+        <div class="opener-wrapper">
+          <button type="button" data-dialog-show="long-dialog">Show Long Dialog</button>
+        </div>
+        <p class="ellipsis">…<br />…<br />…<br />…<br />…<br /></p>
+        <div class="opener-wrapper">
+          <button type="button" data-dialog-show="animated-dialog">Show Animated Dialog</button>
+        </div>
+        <p class="ellipsis">…<br />…<br />…<br />…<br />…<br /></p>
+        <div class="opener-wrapper">
+          <button type="button" data-dialog-show="full-screen-dialog">Show Full-screen Dialog</button>
+        </div>
       </main>
     </div>
     <div id="dialog-root">
@@ -49,7 +56,7 @@
             <div class="dialog__document" role="document">
               <h2 id="long-dialog-title">Long Dialog Title</h2>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
-              <p class="ellipsis">...<br />...<br />...<br />...<br />...<br />...<br />...<br />...<br />...<br />...</p>
+              <p class="ellipsis">…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br />…</p>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
             </div>
           </div>
@@ -69,9 +76,9 @@
       <div class="full-screen-dialog" id="full-screen-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog" data-dialog-app-root="app-root">
         <div class="full-screen-dialog__element" role="dialog" aria-labelledby="full-screen-dialog-title" aria-modal="true">
           <div class="full-screen-dialog__document" role="document">
-            <button type="button" data-action="dialog#hide">Close</button>
             <h2 id="full-screen-dialog-title">Full-screen Dialog Title</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
+            <button class="close" type="button" data-action="dialog#hide">Close</button>
           </div>
         </div>
       </div>
