--- a/src/index.html
+++ b/src/index.html
@@ -20,20 +20,20 @@
       <main>
         <h1>Stimulus Dialog</h1>
         <p>Source: <a href="https://github.com/chalkygames123/stimulus-dialog" rel="noreferrer noopener">https://github.com/chalkygames123/stimulus-dialog</a></p>
-        <div style="margin-top: 1em;">
+        <div style="margin-top: 1em">
           <button type="button" data-dialog-show="basic-dialog">Show Basic Dialog</button>
         </div>
-        <div style="margin-top: 1em;">
+        <div style="margin-top: 1em">
           <button type="button" data-dialog-show="long-dialog">Show Long Dialog</button>
         </div>
-        <div style="margin-top: 1em;">
+        <div style="margin-top: 1em">
           <button type="button" data-dialog-show="animated-dialog">Show Animated Dialog</button>
         </div>
-        <div style="margin-top: 1em;">
+        <div style="margin-top: 1em">
           <button type="button" data-dialog-show="full-screen-dialog">Show Full-screen Dialog</button>
         </div>
-        <p class="ellipsis">…<br />…<br />…<br />…<br />…<br /></p>
-        <p style="text-align: center;">The end of the page</p>
+        <p class="ellipsis">…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br /></p>
+        <p style="text-align: center">The end of the page</p>
       </main>
     </div>
     <div id="dialog-root">
@@ -42,8 +42,11 @@
           <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
           <div class="dialog__element" role="dialog" aria-labelledby="basic-dialog-title" aria-modal="true">
             <div class="dialog__document" role="document">
-              <h2 id="basic-dialog-title">Basic Dialog Title</h2>
+              <h2 id="basic-dialog-title">Basic Dialog</h2>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
+              <div style="margin-top: 1em">
+                <button type="button" data-action="dialog#hide">Close</button>
+              </div>
             </div>
           </div>
         </div>
@@ -53,10 +56,13 @@
           <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
           <div class="dialog__element" role="dialog" aria-labelledby="long-dialog-title" aria-modal="true">
             <div class="dialog__document" role="document">
-              <h2 id="long-dialog-title">Long Dialog Title</h2>
+              <h2 id="long-dialog-title">Long Dialog</h2>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
+              <div style="margin-top: 1em">
+                <button type="button" data-action="dialog#hide">Close</button>
+              </div>
               <p class="ellipsis">…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br />…</p>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
+              <p style="text-align: center">The end of the dialog</p>
             </div>
           </div>
         </div>
@@ -66,8 +72,11 @@
           <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
           <div class="dialog__element" role="dialog" aria-labelledby="animated-dialog-title" aria-modal="true">
             <div class="dialog__document" role="document">
-              <h2 id="animated-dialog-title">Animated Dialog Title</h2>
+              <h2 id="animated-dialog-title">Animated Dialog</h2>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
+              <div style="margin-top: 1em">
+                <button type="button" data-action="dialog#hide">Close</button>
+              </div>
             </div>
           </div>
         </div>
@@ -75,9 +84,9 @@
       <div class="full-screen-dialog" id="full-screen-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog" data-dialog-app-root="app-root">
         <div class="full-screen-dialog__element" role="dialog" aria-labelledby="full-screen-dialog-title" aria-modal="true">
           <div class="full-screen-dialog__document" role="document">
-            <h2 id="full-screen-dialog-title">Full-screen Dialog Title</h2>
+            <h2 id="full-screen-dialog-title">Full-screen Dialog</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
-            <div style="margin-top: 1em;">
+            <div style="margin-top: 1em">
               <button type="button" data-action="dialog#hide">Close</button>
             </div>
           </div>
