aria-modal 属性を削除

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     <div class="dialog" id="basic-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
       <div class="dialog__inner">
         <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-        <div class="dialog__element" role="dialog" aria-labelledby="basic-dialog-title" aria-modal="true">
+        <div class="dialog__element" role="dialog" aria-labelledby="basic-dialog-title">
           <div class="dialog__document" role="document">
             <h2 id="basic-dialog-title">Basic Dialog</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
@@ -51,7 +51,7 @@
     <div class="dialog" id="long-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
       <div class="dialog__inner">
         <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-        <div class="dialog__element" role="dialog" aria-labelledby="long-dialog-title" aria-modal="true">
+        <div class="dialog__element" role="dialog" aria-labelledby="long-dialog-title">
           <div class="dialog__document" role="document">
             <h2 id="long-dialog-title">Long Dialog</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
@@ -67,7 +67,7 @@
     <div class="dialog" id="animated-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
       <div class="dialog__inner">
         <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-        <div class="dialog__element" role="dialog" aria-labelledby="animated-dialog-title" aria-modal="true">
+        <div class="dialog__element" role="dialog" aria-labelledby="animated-dialog-title">
           <div class="dialog__document" role="document">
             <h2 id="animated-dialog-title">Animated Dialog</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
@@ -79,7 +79,7 @@
       </div>
     </div>
     <div class="full-screen-dialog" id="full-screen-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
-      <div class="full-screen-dialog__element" role="dialog" aria-labelledby="full-screen-dialog-title" aria-modal="true">
+      <div class="full-screen-dialog__element" role="dialog" aria-labelledby="full-screen-dialog-title">
         <div class="full-screen-dialog__document" role="document">
           <h2 id="full-screen-dialog-title">Full-screen Dialog</h2>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
