aria-describedby 属性を追加

--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,10 @@
     <div class="dialog" id="basic-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
       <div class="dialog__inner">
         <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-        <div class="dialog__element" role="dialog" aria-labelledby="basic-dialog-title">
+        <div class="dialog__element" role="dialog" aria-labelledby="basic-dialog-title" aria-describedby="basic-dialog-desc">
           <div class="dialog__document" role="document">
             <h2 id="basic-dialog-title">Basic Dialog</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
+            <p id="basic-dialog-desc">This is a basic dialog.</p>
             <div style="margin-top: 1em">
               <button type="button" data-action="dialog#hide">Close</button>
             </div>
@@ -51,10 +51,10 @@
     <div class="dialog" id="long-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
       <div class="dialog__inner">
         <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-        <div class="dialog__element" role="dialog" aria-labelledby="long-dialog-title">
+        <div class="dialog__element" role="dialog" aria-labelledby="long-dialog-title" aria-describedby="long-dialog-desc">
           <div class="dialog__document" role="document">
             <h2 id="long-dialog-title">Long Dialog</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
+            <p id="long-dialog-desc">This is a long dialog.</p>
             <div style="margin-top: 1em">
               <button type="button" data-action="dialog#hide">Close</button>
             </div>
@@ -67,10 +67,10 @@
     <div class="dialog" id="animated-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
       <div class="dialog__inner">
         <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-        <div class="dialog__element" role="dialog" aria-labelledby="animated-dialog-title">
+        <div class="dialog__element" role="dialog" aria-labelledby="animated-dialog-title" aria-describedby="animated-dialog-desc">
           <div class="dialog__document" role="document">
             <h2 id="animated-dialog-title">Animated Dialog</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
+            <p id="animated-dialog-desc">This is an animated dialog.</p>
             <div style="margin-top: 1em">
               <button type="button" data-action="dialog#hide">Close</button>
             </div>
@@ -79,10 +79,10 @@
       </div>
     </div>
     <div class="full-screen-dialog" id="full-screen-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
-      <div class="full-screen-dialog__element" role="dialog" aria-labelledby="full-screen-dialog-title">
+      <div class="full-screen-dialog__element" role="dialog" aria-labelledby="full-screen-dialog-title" aria-describedby="full-screen-dialog-desc">
         <div class="full-screen-dialog__document" role="document">
           <h2 id="full-screen-dialog-title">Full-screen Dialog</h2>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, nostrum? Officia quas recusandae quos obcaecati earum necessitatibus ullam eveniet temporibus dicta, perspiciatis, illo quidem eum ipsa odit perferendis repudiandae culpa!</p>
+          <p id="full-screen-dialog-desc">This is a full-screen dialog.</p>
           <div style="margin-top: 1em">
             <button type="button" data-action="dialog#hide">Close</button>
           </div>
