--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>Stimulus Dialog</title>
+    <title>stimulus-dialog</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -17,7 +17,7 @@
 
   <body>
     <main>
-      <h1>Stimulus Dialog</h1>
+      <h1>stimulus-dialog</h1>
       <p>Source: <a href="https://github.com/chalkygames123/stimulus-dialog" rel="noreferrer noopener">https://github.com/chalkygames123/stimulus-dialog</a></p>
       <div style="margin-top: 1em">
         <button type="button" aria-haspopup="dialog" data-dialog-show="basic-dialog">Show Basic Dialog</button>
