--- a/src/index.html
+++ b/src/index.html
@@ -34,13 +34,13 @@
       <p class="ellipsis">…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br /></p>
       <p style="text-align: center">The end of the page</p>
     </main>
-    <div class="dialog" id="basic-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
+    <div class="dialog" id="basic-dialog" aria-hidden="true" aria-labelledby="basic-dialog-title" data-controller="dialog">
       <div class="dialog__inner">
         <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-        <div class="dialog__element" role="dialog" aria-labelledby="basic-dialog-title" aria-describedby="basic-dialog-desc">
+        <div class="dialog__element">
           <div class="dialog__document" role="document">
             <h2 id="basic-dialog-title">Basic Dialog</h2>
-            <p id="basic-dialog-desc">This is a basic dialog.</p>
+            <p>This is a basic dialog.</p>
             <div style="margin-top: 1em">
               <button type="button" data-action="dialog#hide">Close</button>
             </div>
@@ -48,13 +48,13 @@
         </div>
       </div>
     </div>
-    <div class="dialog" id="long-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
+    <div class="dialog" id="long-dialog" aria-hidden="true" aria-labelledby="long-dialog-title" data-controller="dialog">
       <div class="dialog__inner">
         <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-        <div class="dialog__element" role="dialog" aria-labelledby="long-dialog-title" aria-describedby="long-dialog-desc">
+        <div class="dialog__element">
           <div class="dialog__document" role="document">
             <h2 id="long-dialog-title">Long Dialog</h2>
-            <p id="long-dialog-desc">This is a long dialog.</p>
+            <p>This is a long dialog.</p>
             <div style="margin-top: 1em">
               <button type="button" data-action="dialog#hide">Close</button>
             </div>
@@ -64,13 +64,13 @@
         </div>
       </div>
     </div>
-    <div class="dialog" id="animated-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
+    <div class="dialog" id="animated-dialog" aria-hidden="true" aria-labelledby="animated-dialog-title" data-controller="dialog">
       <div class="dialog__inner">
         <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
-        <div class="dialog__element" role="dialog" aria-labelledby="animated-dialog-title" aria-describedby="animated-dialog-desc">
+        <div class="dialog__element">
           <div class="dialog__document" role="document">
             <h2 id="animated-dialog-title">Animated Dialog</h2>
-            <p id="animated-dialog-desc">This is an animated dialog.</p>
+            <p>This is an animated dialog.</p>
             <div style="margin-top: 1em">
               <button type="button" data-action="dialog#hide">Close</button>
             </div>
@@ -78,11 +78,11 @@
         </div>
       </div>
     </div>
-    <div class="full-screen-dialog" id="full-screen-dialog" tabindex="-1" aria-hidden="true" data-controller="dialog">
-      <div class="full-screen-dialog__element" role="dialog" aria-labelledby="full-screen-dialog-title" aria-describedby="full-screen-dialog-desc">
+    <div class="full-screen-dialog" id="full-screen-dialog" aria-hidden="true" aria-labelledby="full-screen-dialog-title" data-controller="dialog">
+      <div class="full-screen-dialog__element">
         <div class="full-screen-dialog__document" role="document">
           <h2 id="full-screen-dialog-title">Full-screen Dialog</h2>
-          <p id="full-screen-dialog-desc">This is a full-screen dialog.</p>
+          <p>This is a full-screen dialog.</p>
           <div style="margin-top: 1em">
             <button type="button" data-action="dialog#hide">Close</button>
           </div>
