リファクタリング

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         <p style="text-align: center">The end of the dialog</p>
       </div>
     </div>
-    <div class="dialog" id="animated-dialog" aria-hidden="true" aria-labelledby="animated-dialog-title" data-controller="dialog">
+    <div class="dialog dialog--animated" id="animated-dialog" aria-hidden="true" aria-labelledby="animated-dialog-title" data-controller="dialog">
       <div class="dialog__backdrop" data-action="click->dialog#hide"></div>
       <div class="dialog__document" role="document">
         <h2 id="animated-dialog-title">Animated Dialog</h2>
