--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./index.css" />
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=Array.from%2CArray.prototype.flatMap%2CCustomEvent%2CElement.prototype.closest%2CNodeList.prototype.forEach%2CObject.assign%2CPromise" defer></script>
-    <script src="./index.js" defer></script>
+    <script src="./index.js" type="module" defer></script>
   </head>
 
   <body>
