--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sanitize.css@12.0.1/forms.min.css" />
 		<link rel="stylesheet" href="./index.css" />
 
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=Array.from%2CArray.prototype.flatMap%2CCustomEvent%2CElement.prototype.closest%2CNodeList.prototype.forEach%2CObject.assign%2CPromise" defer></script>
 		<script src="./index.js" type="module"></script>
 	</head>
 
