`aria-haspopup="dialog"` を削除
参照: https://a11ysupport.io/tech/aria/aria-haspopup_attribute

--- a/src/index.html
+++ b/src/index.html
@@ -19,16 +19,16 @@
 			<h1>stimulus-dialog</h1>
 			<p>Source: <a href="https://github.com/chalkygames123/stimulus-dialog" rel="noreferrer noopener">https://github.com/chalkygames123/stimulus-dialog</a></p>
 			<div style="margin-top: 1em">
-				<button type="button" aria-haspopup="dialog" data-dialog-show="basic-dialog">Show Basic Dialog</button>
+				<button type="button" data-dialog-show="basic-dialog">Show Basic Dialog</button>
 			</div>
 			<div style="margin-top: 1em">
-				<button type="button" aria-haspopup="dialog" data-dialog-show="long-dialog">Show Long Dialog</button>
+				<button type="button" data-dialog-show="long-dialog">Show Long Dialog</button>
 			</div>
 			<div style="margin-top: 1em">
-				<button type="button" aria-haspopup="dialog" data-dialog-show="animated-dialog">Show Animated Dialog</button>
+				<button type="button" data-dialog-show="animated-dialog">Show Animated Dialog</button>
 			</div>
 			<div style="margin-top: 1em">
-				<button type="button" aria-haspopup="dialog" data-dialog-show="full-screen-dialog">Show Full-screen Dialog</button>
+				<button type="button" data-dialog-show="full-screen-dialog">Show Full-screen Dialog</button>
 			</div>
 			<p class="ellipsis">…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br />…<br /></p>
 			<p style="text-align: center">The end of the page</p>
